@@ -2,8 +2,8 @@
 
 #############################################################################
 # ParaTrac: Scalable Tracking Tools for Parallel Applications
-# Copyright (C) 2009  Nan Dun <dunnan@yl.is.s.u-tokyo.ac.jp>
-#
+# Copyright (C) 2009,2010  Nan Dun <dunnan@yl.is.s.u-tokyo.ac.jp>
+
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
 # the Free Software Foundation, either version 3 of the License, or
@@ -19,16 +19,16 @@
 #############################################################################
 
 #
-# Fuse Tracker Main
+# fstrac
+# Filesystem Trace
 #
 
 import os
 import sys
 import optparse
 
-from common import *
-from track import FUSETracker
-from data import FUSETracDB
+import common
+import fsdata
 
 def print_version():
 	from version import PARATRAC_VERSION_STRING
@@ -176,6 +176,45 @@ def parse_argv(argv):
 
     return opts, args
 
+# OptionParser help string workaround
+# adapted from Tim Chase's code from following thread
+# http://groups.google.com/group/comp.lang.python/msg/09f28e26af0699b1
+class OptionParserHelpFormatter(optparse.IndentedHelpFormatter):
+    def format_description(self, desc):
+        if not desc: return ""
+        desc_width = self.width - self.current_indent
+        indent = " " * self.current_indent
+        bits = desc.split('\n')
+        formatted_bits = [
+            textwrap.fill(bit, desc_width, initial_indent=indent,
+                susequent_indent=indent)
+            for bit in bits]
+        result = "\n".join(formatted_bits) + "\n"
+        return result
+
+    def format_option(self, opt):
+        result = []
+        opts = self.option_strings[opt]
+        opt_width = self.help_position - self.current_indent - 2
+        if len(opts) > opt_width:
+            opts = "%*s%s\n" % (self.current_indent, "", opts)
+            indent_first = self.help_position
+        else:
+            opts = "%*s%-*s  " % (self.current_indent, "", opt_width, opts)
+            indent_first = 0
+        result.append(opts)
+        if opt.help:
+            help_text = self.expand_default(opt)
+            help_lines = []
+            for para in help_text.split("\n"):
+                help_lines.extend(textwrap.wrap(para, self.help_width))
+            result.append("%*s%s\n" % (indent_first, "", help_lines[0]))
+            result.extend(["%*s%s\n" % (self.help_position, "", line)
+                for line in help_lines[1:]])
+        elif opts[-1] != "\n":
+            result.append("\n")
+        return "".join(result)
+
 def main():
     opts, args = parse_argv(sys.argv[1:])
     
@@ -191,9 +230,8 @@ def main():
 
     # Database
     if opts.importlog:
-        database = FUSETracDB("%s/trace.db" % opts.importlog)
-        database.create_tables()
-        database.import_data()
+        database = fsdata.Database("%s/fstrace.db" % opts.importlog, True)
+        database.import_rawdata()
         return 0
 
     if opts.mergedbs:
